<resources>
    <string name="module_test_settings">Test Settings</string>
    <string name="general_test_settings">GENERAL TEST SETTINGS</string>
    <string name="general_test_settings_desc">General test related settings</string>
    <string name="data_entry_settings">DATA ENTRY SETTINGS</string>
    <string name="data_entry_settings_desc">Settings related to the data entry, e.g. fields and the workflow</string>
    <string name="units_and_reportable_ranges">UNITS AND REPORTABLE RANGES</string>
    <string name="units_and_reportable_ranges_desc">Settings related to the units used and their ranges</string>
    <string name="ranges">RANGES</string>
    <string name="ranges_desc">Settings related to various ranges, e.g. arterial, cord, capillary, etc.</string>
    <string name="allow_to_reject_test">Allow to reject test</string>
    <string name="enforce_critical_handling">Enforce critical handling</string>
    <string name="recall_patient_id">Recall patient ID</string>
    <string name="recall_sample_type">Recall sample type</string>
    <string name="save_raw_data">Save raw data</string>
    <string name="allow_data_recall">Allow data recall</string>
    <string name="close_completed_tests">Close completed tests</string>
    <string name="allow_expired_cards">Allow expired cards</string>
    <string name="field_settings">FIELD SETTINGS</string>
    <string name="field_settings_desc">Set up the fields</string>
    <string name="set_up_field">Set up the field</string>
    <string name="workflow_editor">WORK FLOW EDITOR</string>
    <string name="work_flow_editor_desc">Not functional. This item will be removed.</string>
    <string name="custom_fields">CUSTOM FIELDS</string>
    <string name="custom_fields_desc">Not functional. Setup or edit custom fields</string>
    <string name="bg">Gases+</string>
    <string name="e">Chem+</string>
    <string name="m">Meta+</string>
    <string name="unspecified">Unspecified</string>
    <string name="unknown">Unknown</string>
    <string name="arterial">Arterial</string>
    <string name="venous">Venous</string>
    <string name="mixed_venous">Mixed venous</string>
    <string name="capillary">Capillary</string>
    <string name="cord">Cord</string>
    <string name="cord_arterial">Cord Arterial</string>
    <string name="cord_venous">Cord Venous</string>
</resources>
