<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_unspecified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/unspecified"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/unknown"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_arterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/arterial"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_venous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/venous"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_mixed_venous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/mixed_venous"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_capillary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/capillary"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_cord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cord"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_cord_arterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cord_arterial"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tv_cord_venous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cord_venous"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

    </LinearLayout>

</ScrollView>