<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_field_settings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/field_settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/field_settings_desc"
                android:textColor="@color/colorAlereLightGray"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:background="@color/pastelBlueLightLight"
            android:id="@+id/ll_workflow_editor"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/workflow_editor"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/work_flow_editor_desc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:background="@color/pastelBlueLightLight"
            android:id="@+id/ll_custom_fields"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/custom_fields"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:paddingTop="1dp"
                android:text="@string/custom_fields_desc"
                android:textColor="@color/colorAlereLightGray"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

    </LinearLayout>

</ScrollView>