<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_bg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/bg"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/set_up_field"
                android:textColor="@color/colorAlereLightGray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/ll_e"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/e"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/set_up_field"
                android:textColor="@color/colorAlereLightGray"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/ll_m"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:text="@string/m"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:paddingTop="1dp"
                android:text="@string/set_up_field"
                android:textColor="@color/colorAlereLightGray"
                android:textSize="14sp" />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

    </LinearLayout>

</ScrollView>